--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
 body {
+  background-color: #a52a2a;
+}
 
+h3 {
+ color: white;
+ font-size: 30px;
+ text-decoration-line: overline underline white wavy 7px;
+}
+h1 {
+  color: #00120B;
+  font-size: 40px;
+   text-decoration: underline wavy;
+   text-shadow: 2px 2px 5px #31E981;
+  word-spacing 30px;
+    font-style: italic;
+}
+h1:hover { 
+font-size: 60px; 
+    font-style: italic;
+  text-shadow: 2px 2px 5px #D8E4FF;
+  font-variant: small-caps;
+  
+ul{
+  list-style-type: none; 
+  background-color: #a52a2a;
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: fixed;
+  padding: 10px;
+  opacity: .8;
+  margin: 0;
+}
+
+
+li {
+  display: inline;
+  padding: 10px 10px;
+}
+a { 
+text-deciratu=ion: none; 
+  color: white;
+  font-variant: small-caps;
 }
