--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
-body {
+ body {
   background-color: #a52a2a;
 }
-
 h3 {
- color: white;
+ color: White; 
  font-size: 30px;
  text-decoration-line: overline underline white wavy 7px;
+ letter-spacing: 5px;
+ text-shadow: 1px 3px;
+}
+
+h3:hover {
+  font-size:50px;
+  text-shadow: 3px 3px 5px black;
+    font-variant: small-caps;
+}
+
+img{
+  width:40%;
+}
+div.polaroid {
+  width: 40%;
+  background-color: White;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+img {width: 40%}
+
+div.container {
+  text-align: center;
+  padding: 10px 20px;
 }
 h1 {
   color: #00120B;
@@ -20,7 +43,7 @@ font-size: 60px;
     font-style: italic;
   text-shadow: 2px 2px 5px #D8E4FF;
   font-variant: small-caps;
-  
+}
 ul{
   list-style-type: none; 
   background-color: #a52a2a;
@@ -32,8 +55,6 @@ ul{
   opacity: .8;
   margin: 0;
 }
-
-
 li {
   display: inline;
   padding: 10px 10px;
