--- a/studentproject.css
+++ b/studentproject.css
@@ -1,5 +1,5 @@
 body{
-  background-color:lightblue;
+  background-color:#a52a2a;
 }
 
 h2 {
@@ -35,7 +35,7 @@ a:hover {
   font-style: normal;
   font-variant: small-caps;
   font-size:30px;
-  color: hotpink;
+  color: White;
   text-variant: smallcaps;
 }
 
